--- a/hibbahlib/build.gradle
+++ b/hibbahlib/build.gradle
@@ -1,28 +1,38 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
+
+publish {
+    userOrg = 'joohyunwon-np'
+    repoName = 'HibbahTest'
+    groupId = 'com.hibbah.todojob'
+    artifactId = 'hibbahlib'
+    publishVersion = '1.0'
+    desc = 'Hibbah test lib'
+}
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.hibbah.todojob"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        consumerProguardFiles 'consumer-rules.pro'
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.gms:play-services-base:16.1.0'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
-
-    implementation project(':hibbahlib')
 }
